fixed horizontal scrollbar (navbar style)

--- a/src/styles/Navbar.scss
+++ b/src/styles/Navbar.scss
@@ -16,8 +16,8 @@ $btn-color: #555;
 }
 
 .navbar {
-    width: 97%;
-    position: fixed;
+    width: 96.9%;
+    position: sticky;
     z-index: 100;
     padding-top: 15px;
     padding-inline: 30px;
@@ -85,7 +85,7 @@ $btn-color: #555;
                     }
                 }
 
-                @import 'searchDropdown.scss';
+                @import './dropDownStyle/searchDropdown.scss';
             }
 
 
@@ -113,12 +113,12 @@ $btn-color: #555;
 
             .navbar-client__avatar {
                 position: relative;
-                @import "clientDropdown.scss";
+                @import "./dropDownStyle/clientDropdown.scss";
             }
 
             .navbar-client__hamburger {
                 position: relative;
-                @import "hamburgerDropdown.scss";
+                @import "./dropDownStyle/hamburgerDropdown.scss";
             }
 
             .navbar-client__submit-btn {
